# molotov-bar-api

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: backend.dockerfile  celeryworker.dockerfile
backend/app/: .gitignore  pyproject.toml
backend/app/alembic/versions/: 5819726b10ff_cleanup_tables.py  a4f6ac6f3f37_add_cocktail_category.py  bfb864d59be2_add_cocktail_ingredients.py  d4867f3a4c0a_first_revision.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: cocktails.py  ingredients.py  users.py
backend/app/app/crawlers/: thecocktaildb_crawler.py
backend/app/app/crud/: __init__.py  base.py  crud_cocktail.py  crud_ingredient.py
backend/app/app/db/: base.py
backend/app/app/models/: __init__.py  cocktail.py  ingredient.py
backend/app/app/schemas/: __init__.py  cocktail.py  ingredient.py
backend/app/app/tests/api/api_v1/: test_cocktails.py
backend/app/app/tests/crud/: test_cocktail.py
backend/app/app/tests/utils/: __init__.py  cocktail.py  ingredients.py
