[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.54.1"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^4.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
emails = "^0.6.0"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^2.0.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
uvicorn = "^0.20.0"
httpcore="0.15"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
black = "^23.1.0"
isort = "^5.12.0"
autoflake = "^2.0.1"
flake8 = "^6.0.0"
pytest = "^7.2.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^4.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

